go button mobile position fix

--- a/style.css
+++ b/style.css
@@ -206,11 +206,13 @@ a:hover {
 		margin: 30px auto;
 		font-size: 1rem;
 	}
-	
+
 	header {
 		width: 100%;
 	}
 	.search__button {
-		margin-left: -20px;
+		margin-left: -10px;
+		right: 0px;
+		left: 20px;
 	}
 }
